--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,2 @@
-[package]
-name = "picopik2"
-version = "0.1.0"
-authors = ["Skyler <wgahnagl@protonmail.com>"]
-edition = "2018"
-
 [workspace]
-members = ["picopik-cli", "picopik-core", "picopik-api"]
+members = ["venue-cli", "venue-core", "venue-api"]
