--- a/venue-api/Cargo.toml
+++ b/venue-api/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "venue-core"
+name = "venue-api"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dependencies.venue-core]
+path = "../venue-core"
