--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "venue-api"
+name = "frontend"
 version = "0.1.0"
+authors = ["Skyler Jane Clark <skylerjaneclark@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[dependencies.venue-core]
-path = "../venue-core"
+actix-web = "2.0"
