--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "venue-core"
+name = "core"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+failure = "0.1.6"
+
