--- a/models/Cargo.toml
+++ b/models/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "core"
+name = "models"
 version = "0.1.0"
 edition = "2018"
 
@@ -9,10 +9,3 @@ edition = "2018"
 failure = "0.1.6"
 actix = "0.9.0"
 dotenv = "0.15.0"
-futures = "0.3.5"
-
-[dependencies.api]
-path = "../api"
-
-[dependencies.models]
-path = "../models"
